tests/baselines/reference/classWithOverloadImplementationOfWrongName2.errors.txt
classWithOverloadImplementationOfWrongName2.ts(3,5): error TS2389: Function implementation name must be 'foo'.
classWithOverloadImplementationOfWrongName2.ts(4,5): error TS2391: Function implementation is missing or not immediately following the declaration.


==== classWithOverloadImplementationOfWrongName2.ts (2 errors) ====
    class C {
        foo(): string;
        bar(x): any { }
        ~~~
!!! error TS2389: Function implementation name must be 'foo'.
        foo(x): number;
        ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }